--- a/components/header.html
+++ b/components/header.html
@@ -1,26 +1,45 @@
-<header class="main-nav">
-  <div class="nav-container">
-    <a href="index.html" class="logo-link">
-      <img src="images\G4E-no-bg.png" alt="Earth Foundation Logo" class="logo-pic" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Earth Foundation</title>
+    <!-- Add your CSS and Bootstrap links here -->
+</head>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">
+      <img src="images/G4E-no-bg.png" alt="Earth Foundation Logo" style="height: 40px;">
     </a>
-    <button class="hamburger-menu" aria-label="Open navigation">
-      <span class="line line-1"></span>
-      <span class="line line-2"></span>
-      <span class="line line-3"></span>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    
-    <nav class="nav-wrapper">
-      <ul class="nav-links">
-        <li><a href="index.html" class="nav-link">Home</a></li>
-        <li><a href="about.html" class="nav-link">About</a></li>
-        <li><a href="our-work.html" class="nav-link">Our Work</a></li>
-        <li><a href="impact.html" class="nav-link">Impact</a></li>
-        <li><a href="contact.html" class="nav-link">Contact</a></li>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="our-work.html">Our Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="impact.html">Impact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
       </ul>
-      <div class="nav-cta">
-        <a href="get-involved.html" class="nav-button">Get Involved</a>
-      </div>
-    </nav>
-    
+      <a href="partner-with-us.html" class="btn btn-primary ms-lg-3">Partner with Us</a>
+    </div>
   </div>
-</header>
+</nav>
+
+<!-- Add your JavaScript and Bootstrap scripts here -->
+
+</body>
+</html>
